--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest ./src/server"
   },
   "engines": {
-    "node": "10.x"
+    "node": "10.15.3"
   },
   "repository": {
     "type": "git",
