--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
+    "multer": "^1.4.2",
     "validator": "^13.1.17"
   },
   "devDependencies": {
