Added server testing

--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "backend-daniel",
+  "jest": {
+    "testEnvironment": "node"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index",
     "server": "nodemon index",
-    "test": "jest ./src/server"
+    "test": "jest --watch --runInBand --detectOpenHandles"
   },
   "engines": {
     "node": "10.15.3"
@@ -35,6 +38,7 @@
   },
   "devDependencies": {
     "jest": "^26.6.0",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "supertest": "^5.0.0"
   }
 }
